--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "sib-api-v3-sdk": "^8.0.2"
   },
   "engines": {
     "node": "12.x"
