--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pug": "^3.0.0",
