added winston logger and improved html client

--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "http-errors": "^1.8.0",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pug": "^3.0.0",
-    "sib-api-v3-sdk": "^8.0.2"
+    "sib-api-v3-sdk": "^8.0.2",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "engines": {
     "node": "12.x"
